--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "strava-dashboard",
   "version": "1.0.0",
   "main": "backend.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend.js"
+    "dev": "SET NODE_ENV=development && nodemon backend.js",
+    "prod": "SET NODE_ENV=production && node backend.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "dotenv": "^16.5.0"
+  },
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "cross-env": "^7.0.3",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "path": "^0.12.7"
   }
 }
