--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "SET NODE_ENV=development && nodemon backend.js",
-    "prod": "SET NODE_ENV=production && node backend.js"
+    "prod": "SET NODE_ENV=production && node backend.js",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
