--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "SET NODE_ENV=development && nodemon backend.js",
-    "prod": "SET NODE_ENV=production && node backend.js",
+    "dev": "nodemon -r dotenv/config backend.js",
+    "prod": "node backend.js",
     "start": "node backend.js",
     "build": "npm install && cd client && npm install && npm run build"
   },
